--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<footer>
 				<div class="mod-foot">
 					<p>
-						Copyright &copy; 2020 <a href="/">passer-by.com</a>
+						Copyright &copy; 2016 - 2023 <a href="/">passer-by.com</a>
 						<a href="https://beian.miit.gov.cn/" rel="nofollow" target="_blank">闽ICP备18014328号-2</a>
 					</p>
 				</div>
@@ -143,7 +143,7 @@
 		    (function() {
 		      var hm = document.createElement("script");
 		      hm.src = "https://hm.baidu.com/hm.js?b86879c9cc57dd112fe1f7dd75206b82";
-		      var s = document.getElementsByTagName("script")[0]; 
+		      var s = document.getElementsByTagName("script")[0];
 		      s.parentNode.insertBefore(hm, s);
 		    })();
 	    </script>
