--- a/photograph.html
+++ b/photograph.html
@@ -78,32 +78,10 @@
 			</div>
 			<footer>
 				<div class="mod-foot">
-					<p>Copyright &copy; 2017 <a href="/">passer-by.com</a></p>
+					<p>Copyright &copy; 2016 - 2023 <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
 		</div>
-		<script>
-		    var _hmt = _hmt || [];
-		    (function() {
-		      var hm = document.createElement("script");
-		      hm.src = "https://hm.baidu.com/hm.js?b86879c9cc57dd112fe1f7dd75206b82";
-		      var s = document.getElementsByTagName("script")[0]; 
-		      s.parentNode.insertBefore(hm, s);
-		    })();
-	    </script>
-		<script>
-		(function(){
-		    var bp = document.createElement('script');
-		    var curProtocol = window.location.protocol.split(':')[0];
-		    if (curProtocol === 'https') {
-		        bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
-		    }
-		    else {
-		        bp.src = 'http://push.zhanzhang.baidu.com/push.js';
-		    }
-		    var s = document.getElementsByTagName("script")[0];
-		    s.parentNode.insertBefore(bp, s);
-		})();
-		</script>
+		<script type="text/javascript" src="https://passer-by.com/public/script/stat.js"></script>
 	</body>
 </html>
