--- a/project.html
+++ b/project.html
@@ -25,9 +25,24 @@
 			.mod-content li{
 				float: left;
 				width: 50%;
-				height: 20px;
 				line-height: 20px;
 				overflow: hidden;
+			}
+			.mod-content .item{
+				height: 40px;
+				padding: 6px 10px;
+				background: #f8f8f8;
+				margin: 0 2px 4px;
+				border-radius: 5px;
+				line-height: 20px;
+			}
+			.mod-content .J_link:hover{
+				background: #f5f5f5;
+				cursor: pointer;
+			}
+			.mod-content p.summary{
+				font-size: 13px;
+				color: #999;
 			}
 			.mod-content a{
 				padding:0 2px;
@@ -37,6 +52,20 @@
 			}
 			.mod-content a:hover{
 				border-bottom: 1px dotted #666;
+			}
+			@media screen and (max-width: 800px){
+				.container{
+					padding: 0 12px;
+				}
+				.mod-content .item{
+					margin: 0 1px 2px;
+				}
+				.mod-content p.summary{
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					font-size: 12px;
+					overflow: hidden;
+				}
 			}
 		</style>
 		<script>
@@ -72,84 +101,269 @@
 						<section>
 							<h3>算法</h3>
 							<ul>
-								<li><a href="/finder/" target="_blank">最短寻址</a></li>
-								<li><a href="/calc24/" target="_blank">24点计算</a></li>
-								<li><a href="/relationship/" target="_blank">中国亲戚关系计算器</a></li>
-								<li><a href="/chinese-transverter/" target="_blank">中文简体繁体转换器</a></li
-								<li><a href="/calendar/" target="_blank">农历公历转换</a></li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/finder/" target="_blank">最短寻址</a></p>
+										<p class="summary">迷宫自动寻址，游戏常用算法</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/calc24/" target="_blank">24点计算</a></p>
+										<p class="summary">儿时智力问答常见挑战</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/relationship/" target="_blank">中国亲戚关系计算器</a></p>
+										<p class="summary">弘扬中国传统文化，有趣的教育工具</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/chinese-transverter/" target="_blank">中文简体繁体转换器</a></p>
+										<p class="summary">两岸三地文字转换工具</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/calendar/" target="_blank">农历公历转换</a></p>
+										<p class="summary">方便查询农历和公历生日及节假日</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 						<section>
 							<h3>APP</h3>
 							<ul>
-								<li><a href="/relationship/vue/" target="_blank">亲戚关系计算器移动版</a></li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/relationship/vue/" target="_blank">亲戚关系计算器移动版</a></p>
+										<p class="summary">亲戚计算器最佳实践，功能完备</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 						<section>
 							<h3>jQuery组件库</h3>
 							<ul>
 								<li>
-									<a class="hot" href="//jquerywidget.com/jquery-slider/" target="_blank">轮播</a>
-									/<a href="//jquerywidget.com/jquery-slider/subject.html" target="_blank">全屏滚动</a>
+									<div class="J_link item">
+										<p class="title">
+											<a class="hot" href="//jquerywidget.com/jquery-slider/" target="_blank">轮播</a>
+											/<a href="//jquerywidget.com/jquery-slider/subject.html" target="_blank">全屏滚动</a>
+										</p>
+										<p class="summary">幻灯片、全屏轮播、跑马灯等应用</p>
+									</div>
 								</li>
-								<li><a href="//jquerywidget.com/jquery-tabs/" target="_blank">标签页</a></li>
-								<li><a href="//jquerywidget.com/jquery-scrollbar/" target="_blank">滚动条</a></li>
-								<li><a href="//jquerywidget.com/jquery-select/" target="_blank">下拉框</a></li>
-								<li><a href="//jquerywidget.com/jquery-range/" target="_blank">滑动条</a></li>
-								<li><a href="//jquerywidget.com/jquery-dialog/" target="_blank">对话框</a></li>
-								<li><a href="//jquerywidget.com/jquery-countdown/" target="_blank">倒计时</a></li>
-								<li><a href="//jquerywidget.com/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
-								<li><a href="//jquerywidget.com/jquery-headroom/" target="_blank">浮动菜单</a></li>
 								<li>
-									<a href="//jquerywidget.com/jquery-calendar/" target="_blank">日历</a>
-									/<a href="//jquerywidget.com/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-tabs/" target="_blank">标签页</a></p>
+										<p class="summary">网页中用于内容切换</p>
+									</div>
 								</li>
-								<li><a href="//jquerywidget.com/jquery-popup/" target="_blank">弹出层</a></li>
-								<li><a href="//jquerywidget.com/jquery-suggestion/" target="_blank">搜索建议</a></li>
-								<li><a href="//jquerywidget.com/jquery-citys/" target="_blank">城市三级联动</a></li>
-								<li><a href="//jquerywidget.com/jquery-tablesort/" target="_blank">表格排序</a></li>
-								<li><a href="//jquerywidget.com/jquery-inputFormat/" target="_blank">格式化输入框</a></li>
-								<li><a href="//jquerywidget.com/jquery-accordion/" target="_blank">手风琴</a></li>
-								<li><a href="//jquerywidget.com/jquery-colorpicker/" target="_blank">颜色选择器</a></li>
-								<li><a href="//jquerywidget.com/jquery-emoticons/" target="_blank">聊天表情</a></p></li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-scrollbar/" target="_blank">滚动条</a></p>
+										<p class="summary">自定义滚动条</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-select/" target="_blank">下拉框</a></p>
+										<p class="summary">自定义select样式</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-range/" target="_blank">滑动条</a></p>
+										<p class="summary">自定义进度滑动条</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-dialog/" target="_blank">对话框</a></p>
+										<p class="summary">自定义模式对话框</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-countdown/" target="_blank">倒计时</a></p>
+										<p class="summary">抢购秒杀等活动倒计时应用</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-imagezoom/" target="_blank">图片聚焦</a></p>
+										<p class="summary">统一展示不规则尺寸图片</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-headroom/" target="_blank">浮动菜单</a></p>
+										<p class="summary">网页滚动时菜单浮动驻留效果</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title">
+											<a href="//jquerywidget.com/jquery-calendar/" target="_blank">日历</a>
+											/<a href="//jquerywidget.com/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
+										</p>
+										<p class="summary">简易的无限范围日期选择</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-popup/" target="_blank">弹出层</a></p>
+										<p class="summary">详情展示指定弹出位置</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-suggestion/" target="_blank">搜索建议</a></p>
+										<p class="summary">输入过程中实时显示最佳匹配内容</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-citys/" target="_blank">城市三级联动</a></p>
+										<p class="summary">用户所属地理位置选择</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-tablesort/" target="_blank">表格排序</a></p>
+										<p class="summary">单元格的合并及拆分</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-inputFormat/" target="_blank">格式化输入框</a></p>
+										<p class="summary">指定输入框输入的格式</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-accordion/" target="_blank">手风琴</a></p>
+										<p class="summary">内容折叠展开</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-colorpicker/" target="_blank">颜色选择器</a></p>
+										<p class="summary">用户快速选择颜色值</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-emoticons/" target="_blank">聊天表情</a></p>
+										<p class="summary">评论框发送聊天表情</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 						<section>
 							<h3>Zepto组件库</h3>
 							<ul>
-								<li><a href="//jquerywidget.com/zepto-slider/" target="_blank">轮播</a></li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/zepto-slider/" target="_blank">轮播</a></p>
+										<p class="summary">移动端幻灯片</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 						<section>
 							<h3>游戏</h3>
 							<ul>
-								<li><a href="/pacman/" target="_blank">吃豆游戏</a></li>
-								<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/pacman/" target="_blank">吃豆游戏</a></p>
+										<p class="summary">经典游戏HTML5复刻，智能围堵算法</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/blackjack/" target="_blank">21点纸牌</a></p>
+										<p class="summary">经典纸牌游戏</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 						<section>
 							<h3>站点</h3>
 							<ul>
-								<li><a href="//jquerywidget.com" target="_blank">jQuery组件库官网</a></li>
-								<li><a href="http://passerby.cn" target="_blank">随机导航网</a></li>
-								<li><a href="//airplant.net" target="_blank">空凤网</a></li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com" target="_blank">jQuery组件库官网</a></p>
+										<p class="summary">集合常用Web交互插件</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="http://passerby.cn" target="_blank">随机导航网</a></p>
+										<p class="summary">上网冲浪随机网址推荐</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="//airplant.net" target="_blank">空凤网</a></p>
+										<p class="summary">空气凤梨爱好者网址推荐</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 						<section>
 							<h3>数据</h3>
 							<ul>
-								<li><a href="/data_location/" target="_blank">中国行政区划数据</a></li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/data_location/" target="_blank">中国行政区划数据</a></p>
+										<p class="summary">身份证号码归属地查询</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 						<section>
 							<h3>其他</h3>
 							<ul>
-								<li><a href="/datex/" target="_blank">DataX时间格式化</a></li>
-								<li><a href="/browser/" target="_blank">浏览器及设备判断</a></li>
-								<li><a href="/imageCode/" target="_blank">imageCode脚本加密</a></li>
-								<li><a href="/hiddenCode/" target="_blank">hiddenCode脚本加密</a></li>
-								<li><a href="/html5player/" target="_blank">媒体播放器</a></li>
-								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/datex/" target="_blank">DataX时间格式化</a></p>
+										<p class="summary">时间格式快速转换工具</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/browser/" target="_blank">浏览器及设备判断</a></p>
+										<p class="summary">识别用户浏览器信息</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/imageCode/" target="_blank">imageCode脚本加密</a></p>
+										<p class="summary">将代码转化成图片加密</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/hiddenCode/" target="_blank">hiddenCode脚本加密</a></p>
+										<p class="summary">将代码隐藏起来不易察觉</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/html5player/" target="_blank">媒体播放器</a></p>
+										<p class="summary">简易的MP3播放器</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/fancy-icon/" target="_blank">纯CSS图标</a></p>
+										<p class="summary">用CSS实现图标</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 					</div>
@@ -157,32 +371,39 @@
 			</div>
 			<footer>
 				<div class="mod-foot">
-					<p>Copyright &copy; 2017 <a href="/">passer-by.com</a></p>
+					<p>Copyright &copy; 2016 - 2023 <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
 		</div>
-		<script>
-		    var _hmt = _hmt || [];
-		    (function() {
-		      var hm = document.createElement("script");
-		      hm.src = "https://hm.baidu.com/hm.js?b86879c9cc57dd112fe1f7dd75206b82";
-		      var s = document.getElementsByTagName("script")[0];
-		      s.parentNode.insertBefore(hm, s);
-		    })();
-	    </script>
-		<script>
-		(function(){
-		    var bp = document.createElement('script');
-		    var curProtocol = window.location.protocol.split(':')[0];
-		    if (curProtocol === 'https') {
-		        bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
-		    }
-		    else {
-		        bp.src = 'http://push.zhanzhang.baidu.com/push.js';
-		    }
-		    var s = document.getElementsByTagName("script")[0];
-		    s.parentNode.insertBefore(bp, s);
-		})();
+		<script type="text/javascript">
+			document.addEventListener('click',function(e) {
+				console.log('[e]',e);
+				let $tag = e.target;
+				while ($tag.tagName!='A'&&$tag.tagName!='BODY'&&!$tag.classList.contains('J_link')) {
+					$tag = $tag.parentNode;
+				}
+				if($tag.tagName!='A'&&$tag.classList.contains('J_link')){
+					let url = $tag.getAttribute('data-url');
+		            let target = $tag.getAttribute('data-target');
+		            if(url){
+		                if (target !== '_blank') {
+		                    window.open(url);
+		                } else {
+		                    location.href = url;
+		                }
+		            }else{
+		                let $link = $tag.querySelector('a');
+		                target = $link.getAttribute('target');
+		                url = $link.getAttribute('href')||'/';
+		                if (target == '_blank') {
+		                    window.open(url);
+		                } else {
+		                    location.href = url;
+		                }
+		            }
+				}
+		    });
 		</script>
+		<script type="text/javascript" src="https://passer-by.com/public/script/stat.js"></script>
 	</body>
 </html>
