--- a/writing.html
+++ b/writing.html
@@ -90,6 +90,14 @@
                     <div class="bd">
                         <ul>
                             <li>
+                                <a class="qrcode" href="javascript:;" href="javascript:;">
+                                    <img src="https://www.passer-by.com/static/image/public/icon-scan.png" width="24" height="24"/>
+                                    <span class="popup">
+                                        <img src="https://www.passer-by.com/static/image/public/qrcode.jpg" width="150" alt="亲戚关系微信小程序"/>
+                                    </span>
+                                </a>
+                            </li>
+                            <li>
                                 <a class="gotop" href="javascript:;" rel="nofollow">
                                     <img src="./static/image/public/icon-gotop.png" width="24" height="24" alt="回到顶部">
                                 </a>
